objects/DNPageCred__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DNPageCred</label>
</CustomObject>